<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:layout_width="0dp"
            android:id="@+id/email_et"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.4"
            app:layout_constraintWidth_percent="0.6"
            android:hint="@string/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:layout_marginTop="10dp"
            android:layout_width="0dp"
            android:id="@+id/password_dt"
            app:layout_constraintTop_toBottomOf="@id/email_et"
            app:layout_constraintWidth_percent="0.6"
            android:hint="@string/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_width="0dp"
            android:id="@+id/signup_btn"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/password_dt"
            app:layout_constraintEnd_toEndOf="@id/password_dt"
            app:layout_constraintTop_toBottomOf="@id/password_dt"
            android:layout_marginTop="5dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>